--- a/Basic-Portfolio/index.html
+++ b/Basic-Portfolio/index.html
@@ -1,61 +1,33 @@
 <!DOCTYPE html>
-<html lang="en-us"></html>
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <title>Basic Portfolio</title>
+    <link rel="stylesheet" style="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" style="text/css" href="assets/css/stylee.css">
     
     <style>
-
-        .sections {
-            padding: 20px;
-            margin: 0px;
-        }
-        .header {
-        border-bottom: solid;
-        }
-        #name {
-            text-align: left;
-            font-family: Georgia;
-            width:250px;
-            padding: 10px 0px 10px 15px;
-            color: #ffffff;
-            background-color: #4aaaa5;
-            margin-left: 300px;
-        }
-        .links ul li {
-            padding: 10px;
-            list-style-type: none;
-            float: right;
-            top:0;
-            right:0;
-            display: inline;
-            overflow: auto;
-        }
-        .aboutme {
-            margin-left: 300px;
-            width: 650px;
-            float: left;
-        }
-        .letsconnect {
-            float: right;
     </style>
 </head>
-<body>
-    <div class= "sections">        
-        <div class= "header"
+<body>       
+    <header>
             <div id="name">
                 <h1>James Rhee</h1>
             </div>
             <div class="links">
                 <ul>
-                    <li>About</li>
-                    <li>Portfolio</li>
-                    <li>Contact</li>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
-        </div>
+    </header>
+
+    <main>     
             <div class="aboutme">
                 <h2>About Me</h2>
+                <div class="paragraphs">
+                    <img src="assets/images/facepic.jpg" alt="profilepic"/>
                     <p>
                     Gamer, sports enthusiast, festival hunter and all around 
                     genuine human being. Some people like only 1 of those things
@@ -73,12 +45,24 @@
                     like hip hop and rock most of my life, but recently 
                     electronic music has made me really enjoy life to the 
                     fullest.
-                
                     </p>
+                </div>
             </div>
             <div class="letsconnect">
                 <h3>Connect with Me</h3>
-
+                <div class="gitimg">
+                        <a href="https://github.com/lifeisaMr-Rhee"><img src="assets/images/github.png" alt="github"/></a>
+                    </div>
+                    <div class="linkimg">
+                        <a href="https://www.linkedin.com/in/james-rhee-010292122/"><img src="assets/images/linkedin.png" alt="linkedin"/></a>
+                    </div>
+                    <div class="overimg">
+                        <a href="https://stackoverflow.com/users/8860392/james-rhee?tab=profile"><img src="assets/images/overflow.png" alt="overflow"/></a>
+                    </div>
             </div>
-        </div>
+    </main>
+            <footer>
+                <p>CopyrightⒸ2017 James Rhee</p>
+            </footer>
 </body>
+</html>
